<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="light">Light Theme</string>
    <string name="dark">Dark Theme</string>
    <string name="close">CLOSE</string>
    <string name="app_name">Supremez</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="apply_wall">Set Wallpaper</string>
    <string name="description">Supremez consist in of a wide range of wallpapers and clockswidgets</string>
    <string name="one_column">One Column</string>
    <string name="two_column">Two Column</string>
    <string name="three_column">Three Column</string>
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="changelog_title">Changelog</string>
    <string name="playstore_link">https://play.google.com/store/apps/details?id=com.diamondinc.zwskin.supremez</string>
    <string name="googleplus_link">https://plus.google.com/+ArturoMB</string>

    <!-- Changelog -->
    <string name="changelog">

          v1.0\n\n

        &#8226; Welcome to SupremezV2\n
        &#8226; New Dashboard, Widgets and Walls\n
   </string>

    <string name="apkfilename">Supremezv2.apk</string>





</resources>
