<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="About"
        android:orderInCategory="1000"
        app:showAsAction="never" />

    <group android:id="@+id/group1"
        android:checkableBehavior="single">
    <item
        android:id="@+id/LightTheme"
        android:orderInCategory="1"
        android:title="@string/light"
        app:showAsAction="never"/>
    <item
        android:id="@+id/DarkTheme"
        android:orderInCategory="1"
        android:title="@string/dark"
        app:showAsAction="never"
        android:checked="true"/>
    </group>
</menu>
